# pipeworkmc-data

./: Cargo.toml  README.md
src/: action.rs  angle.rs  banner_pattern.rs  block_pos.rs  bounded_string.rs  box_cow.rs  cat_variant.rs  channel_data.rs  chicken_variant.rs  chunk_pos.rs  client_info.rs  colour.rs  cow_variant.rs  damage_type.rs  difficulty.rs  dimension_type.rs  format.rs  frog_variant.rs  game_mode.rs  hand.rs  ident.rs  item_stack.rs  itemstack.rs  known_pack.rs  lib.rs  light_level.rs  operator_level.rs  pack_status.rs  painting_variant.rs  particle.rs  pig_variant.rs  redacted.rs  registry_entry.rs  selected_hotbar.rs  server_status.rs  tag_ident.rs  unprefixed.rs  wolf_sound_variant.rs  wolf_variant.rs
src/character/: mod.rs  pos.rs
src/dialog/: mod.rs
src/nbt/: mod.rs
src/nbt/deser/: mod.rs  root.rs
src/nbt/ser/: map.rs  mod.rs  root.rs  seq.rs
src/nbt/value/: mod.rs
src/num/: mod.rs  multiple16.rs  provider.rs  weighted.rs
src/profile/: deser.rs  mod.rs
src/registry_entry/: banner_pattern.rs  cat_variant.rs  chat_type.rs  chicken_variant.rs  cow_variant.rs  damage_type.rs  dimension_type.rs  frog_variant.rs  mod.rs  painting_variant.rs  pig_variant.rs  trim_material.rs  trim_pattern.rs  wolf_sound_variant.rs  wolf_variant.rs
src/registry_entry/worldgen/: biome.rs
src/text/: mod.rs  ser.rs
src/version/: gen.py  mod.rs  out.rs
src/worldgen/: biome.rs  mod.rs
