[package]
name    = "pipeworkmc-data"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"


[dependencies.pipeworkmc-codec]
path = "../pipeworkmc-codec"


# ECS

[dependencies.bevy_ecs]
version = "0.16"


# Serialisation & Zeroise

[dependencies.cesu8]
version = "1.1"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.zeroize]
version = "1.8"
