[package]
name    = "pipeworkmc-data"
version = "0.1.0"
edition = "2024"

[features]
bevy      = [ "dep:bevy_ecs" ]
generated = [ ]

[lints.rust]
unused_parens = "allow"
missing_docs  = "deny"

# ECS

[dependencies.bevy_ecs]
version          = "0.17"
default-features = false
optional         = true

# Serialisation & Zeroise

[dependencies.netzer]
git      = "https://github.com/PipeworkMC/netzer"
branch   = "main"
features = [ "derive" ]

[dependencies.cesu8]
version = "1.1"

[dependencies.disqualified]
version = "1.0"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.syndebug]
git      = "https://github.com/Totobird-Creations/syndebug"
branch   = "main"
features = [ "serde" ]

[dependencies.zeroize]
version = "1.8"

# Values

[dependencies.uuid]
version  = "1.18"
features = [ "v3", "serde" ]
